--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     container_name: ip-cache-service
     ports:
-      - "3000:3000"
+      - '3000:3000'
     depends_on:
       - mongo
       - redis
@@ -25,22 +25,22 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
       MONGO_INITDB_DATABASE: ${MONGO_DB_NAME}
     ports:
-      - "27017:27017"
+      - '27017:27017'
     volumes:
       - mongo-data:/data/db
     networks:
       - app-network
     healthcheck:
-      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
+      test: ['CMD', 'mongo', '--eval', "db.adminCommand('ping')"]
       interval: 10s
       timeout: 5s
-      retries: 5  
+      retries: 5
 
   redis:
     image: redis:7.0
     container_name: redis-cache
     ports:
-      - "6379:6379"
+      - '6379:6379'
     volumes:
       - redis-data:/data
     networks:
