--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node src/app.ts",
     "test": "jest",
     "start:dev": "nodemon src/app.ts",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write ."
   },
